admission/ValidatingAdmissionPolicy/policies/apparmor-profile/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: apparmor-profile-pod
  annotations:
    kubeapt.io/uuid: "b71879ea-3051-4076-9040-e60c9606f4e5"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
  securityContext:
    appArmorProfile:
      type: Unconfined
